@@ -1,0 +1,20 @@
+"""Easy install Tests
+"""
+import os, shutil, tempfile, unittest
+from setuptools.command.easy_install import easy_install
+from setuptools.dist import Distribution
+
+class TestEasyInstallTest(unittest.TestCase):
+
+    def test_install_site_py(self):
+        dist = Distribution()
+        cmd = easy_install(dist)
+        cmd.sitepy_installed = False
+        cmd.install_dir = tempfile.mkdtemp()
+        try:
+            cmd.install_site_py()
+            sitepy = os.path.join(cmd.install_dir, 'site.py')
+            self.assert_(os.path.exists(sitepy))
+        finally:
+            shutil.rmtree(cmd.install_dir)
+
